2001-11-26  Johan Dahlin  <jdahlin@telia.com>

	* src/function-database.h: Added function_removed here too.
	A few style fixes i forgot to do yesterday.

	* src/function-database.c (fd_class_init): Added function_removed signal.
	(fd_idle_search): Call it.

	* src/devhelp-search.c (devhelp_search_function_removed_cb): Impl.
	(devhelp_search_new): connect signal function_removed.

2001-11-25  Johan Dahlin  <jdahlin@telia.com>

	* src/devhelp-controller.c (devhelp_controller_book_removed_cb):
	Remove all functions in book from function_database.

	* src/function-database.c (function_database_remove_function): Impl.

	* src/book.c: Added functions to _BookPriv.
	(book_parse_function): Add function to priv->functions.
	(book_get_functions): Impl.

	* src/book-index.c (book_index_remove_book): Impl.

	* configure.in: Added libglade check. Added LIBGLADE_CFLAGS.
	
	* src/Makefile.am (INCLDES): Added LIBGLADE_CFLAGS.

2001-11-17  Mikael Hallendal  <micke@codefactory.se>

	* src/bookshelf.c (bookshelf_add_directory): DON'T SEGFAULT ON
	STARTUP.

2001-11-15  Ross Golder  <ross@golder.org>

	* devhelp.spec.in: Changed ${_sysconfdir} to %{_sysconfdir}

2001-10-25  Johan Dahlin  <zilch.am@home.se>

	* src/devhelp-controller.c (devhelp_controller_init): Use
	~/.devhelp as constructor and add DATA_DIR/devhelp later.

	* src/bookshelf.h: Added XMLBook, since it's used in books-dialog.c.
	Removed bookshelf_read_xml, added bookshelf_get_hidden_books,
	show/hide_book

	* src/bookshelf.c (bookshelf_new): Read ~/.devhelp/books.xml here.
	(bookshelf_get_hidden_books): New function
	(bookshelf_hide_book): New function
	(bookshelf_show_book): New function
	(bookshelf_read_xml): Updated.
	(bookshelf_write_xml): Updated.
	(bookshelf_add_directory): Updated, much cleaner now.

	* src/books-dialog.c: Changed to match bookshelf updates.

	* src/book-index.c (book_index_open_node): Style fix.

2001-10-22  Mikael Hallendal  <micke@codefactory.se>

	* src/book.c (book_new): copy spec-file uri.