@@ -1,3 +1,12 @@
+2001-11-28  Johan Dahlin  <jdahlin@telia.com>
+
+	* src/devhelp-window.c: Style fixes.
+
+	* src/bookshelf.c (bookshelf_get_hidden_books): Update.
+	(bookshelf_show_book): Dito
+	(xml_spec_get_book_uri): New function
+	(bookshelf_add_directory): Update.
+
 2001-11-26  Johan Dahlin  <jdahlin@telia.com>
 
 	* src/function-database.h: Added function_removed here too.
